# tgtranslatebot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  env_example  pyproject.toml  requirements.txt  translation_history.db
app/: main.py
app/bot/: bot.py  deepl_api.py
app/database/: db_conn.py  db_crud.py
app/tgbot/: bot.py  deepl_api.py
tests/: test_db.py
